<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="33dp"
        android:gravity="right"
        android:text="Location Here" />

    <Button
        android:id="@+id/btn_snap"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="31dp"
        android:onClick="takePicture"
        android:text="snap" />

    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="353dp"
        android:layout_height="273dp"
        android:layout_above="@+id/btn_snap"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="187dp"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="152dp"
        android:onClick="onFilter"
        android:text="filter" />

    <Button
        android:id="@+id/btn_r"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="305dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="153dp"
        android:onClick="changePicture"
        android:text="right" />

    <Button
        android:id="@+id/btn_l"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="152dp"
        android:onClick="changePicture"
        android:text="left" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="239dp"
        android:text="2020-01-24" />

    <EditText
        android:id="@+id/editText_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_snap"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="131dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Test Caption" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="91dp"
        android:onClick="uploadPicture"
        android:text="Social Media" />

    <Button
        android:id="@+id/btn_upload_tomcat"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="91dp"
        android:onClick="tomcat"
        android:text="Tomcat" />


</RelativeLayout>